--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>kt0609.github.io</h1>
 <h2>부제목을 입력하십시오.</h2>
 <p>'GitHub Pages'를 이용하였습니다.<br>현재 페이지 정비 중입니다.</p>
-<a href = "https://www.facebook.com/kt0609us">Facebook</a>
+<a href = "https://www.facebook.com/kt0609one">Facebook</a>
 </body>
 </html>
