--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>kt0609.github.io</h1>
-<h2>부제목을 입력하십시오.</h2>
-<p>'GitHub Pages'를 이용하였습니다.<br>현재 페이지 정비 중입니다.</p>
-<a href = "https://www.facebook.com/kt0609one">Facebook</a>
-</body>
+  <head>
+    <title>kt0609.github.io</title>
+  </head>
+  <body>
+    <h1>kt0609.github.io</h1>
+    <h2>부제목을 입력하십시오.</h2>
+    <hr>
+    <p>
+      Hello, world!
+    </p>
+    <a href = "https://www.facebook.com/kt0609one">Facebook</a>
+  </body>
 </html>
