--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kt0609.github.io</title>
+    <title>kt0609</title>
   </head>
   <body>
     <h1>kt0609.github.io</h1>
